--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Set a cookie using the same API on both the client and the server.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "browserify": "browserify test/browser/index.js -o test/browser/bundle.js --debug",
+    "test-server": "http-server ./test/browser -p 8888 -o",
+    "test-browser": "npm run browserify && npm run test-server"
   },
   "keywords": [
     "cookie",
@@ -23,7 +26,8 @@
   "devDependencies": {
     "mocha": "^1.20.0",
     "chai": "^1.9.1",
-    "http": "0.0.0",
-    "superagent": "^0.18.0"
+    "superagent": "^0.18.0",
+    "browserify": "^4.1.6",
+    "http-server": "^0.6.1"
   }
 }
