--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "author": "Spike Brehm <ocelot@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "cookie": "^0.1.2",
-    "sinon": "^1.10.0"
+    "cookie": "^0.1.2"
   },
   "browser": {
     "./lib/setter/index.js": "./lib/setter/client.js"
@@ -30,6 +29,7 @@
   "devDependencies": {
     "mocha": "^1.20.0",
     "chai": "^1.9.1",
+    "sinon": "^1.10.0",
     "superagent": "^0.18.0",
     "browserify": "^4.1.6",
     "http-server": "^0.6.1"
